--- a/index.html
+++ b/index.html
@@ -36,7 +36,32 @@
     </header>
 
     <main>
-
+        <div class="container p-4">
+            <h1>Bienvenidos a ROMA estetica</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae quisquam hic laboriosam accusamus aspernatur quo cum sunt. Necessitatibus temporibus corrupti sequi cupiditate unde quod consequuntur accusamus repellat explicabo deleniti, sunt ratione quibusdam facere. Ad et reprehenderit cum quibusdam, expedita ducimus suscipit deleniti id temporibus consectetur accusamus vel nemo sapiente dolore ullam fugiat sed, possimus nam natus, quisquam exercitationem beatae esse?
+            </p>
+        </div>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="..." class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
     </main>
 
 
