--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </section>
-    <section class="container my-5">
+    <section class="container p-4">
       <h2>Lorem ipsum dolor sit amet.</h2>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem, ullam mollitia sequi laborum neque,
         assumenda sunt aut laboriosam eos omnis nisi veritatis quae, praesentium sint culpa iusto facere repudiandae.
