mejora carousel y agregue container row

--- a/index.html
+++ b/index.html
@@ -84,6 +84,28 @@
         assumenda sunt aut laboriosam eos omnis nisi veritatis quae, praesentium sint culpa iusto facere repudiandae.
         Doloribus?</p>
     </section>
+    <section class="container p-4 infoImagen">
+      <div class="row">
+        <div class="col-12 col-md-6 col-lg-4 pt-4">
+          <h3>Lorem ipsum dolor sit.</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos facilis quas dolor consectetur doloremque
+            temporibus provident natus fugiat, perspiciatis voluptatum.</p>
+          <img src="https://via.placeholder.com/300" alt="">
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 pt-4">
+          <h3>Lorem ipsum dolor sit.</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos facilis quas dolor consectetur doloremque
+            temporibus provident natus fugiat, perspiciatis voluptatum.</p>
+          <img src="https://via.placeholder.com/300" alt="">
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 pt-4">
+          <h3>Lorem ipsum dolor sit.</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos facilis quas dolor consectetur doloremque
+            temporibus provident natus fugiat, perspiciatis voluptatum.</p>
+          <img src="https://via.placeholder.com/300" alt="">
+        </div>
+      </div>
+    </section>
   </main>
   <!-- Footer -->
   <footer class="footer">
@@ -96,7 +118,7 @@
           <li><a href="#" target="_blank"><i class="fa-brands fa-whatsapp"></i></a></li>
         </ul>
       </div>
-      <p>Realizado con muchas cositas por Gabriel Duarte</p>
+      <p>HECHO CON MUCHAS COSITAS POR GABRIEL DUARTE</p>
     </div>
   </footer>
 
