Galeria con imagenes

--- a/galeria.html
+++ b/galeria.html
@@ -41,6 +41,43 @@
     </header>
     <!-- Contenido -->
     <main>
+        <section class="galeria">
+            <div class="titulosGaleria">
+                <h3>GALERIA DE CORTES</h3>
+                <h4 class="titulosCortes">CORTES CORTOS</h4>
+            </div>
+            <div class="grid">
+                <div>
+                    <img src="https://via.placeholder.com/500x300.png" alt="">
+                </div>
+                <div>
+                    <img src="https://via.placeholder.com/300.png" alt="">
+                </div>
+                <div>
+                    <img src="https://via.placeholder.com/300.png" alt="">
+                </div>
+                <div>
+                    <img src="https://via.placeholder.com/300.png" alt="">
+                </div>
+            </div>
+            <div class="titulosCortes">
+                <h4>CORTES MEDIANOS</h4>
+            </div>
+            <div class="grid">
+                <div>
+                    <img src="https://via.placeholder.com/300.png" alt="">
+                </div>
+                <div>
+                    <img src="https://via.placeholder.com/500x300.png" alt="">
+                </div>
+                <div>
+                    <img src="https://via.placeholder.com/300.png" alt="">
+                </div>
+                <div>
+                    <img src="https://via.placeholder.com/300.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     <!-- Footer -->
     <footer class="footer">
@@ -56,6 +93,11 @@
             <p>HECHO CON MUCHAS COSITAS POR GABRIEL DUARTE</p>
         </div>
     </footer>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
