--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
     <section id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="https://via.placeholder.com/1920x400.png" class="d-block w-100" alt="...">
+          <img src="./img/slider1.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="https://via.placeholder.com/1920x400.png/FF0000" class="d-block w-100" alt="...">
+          <img src="./img/slider2.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="https://via.placeholder.com/1920x400.png/0000FF" class="d-block w-100" alt="...">
+          <img src="./img/slider3.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="https://via.placeholder.com/1920x400.png/008000" class="d-block w-100" alt="...">
+          <img src="./img/slider4.jpg" class="d-block w-100" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
