--- a/galeria.html
+++ b/galeria.html
@@ -47,19 +47,35 @@
                 <h4 class="titulosCortes">CORTES CORTOS</h4>
             </div>
             <div class="grid">
+                <div>
                     <img src="https://via.placeholder.com/500x300.png" alt="">
+                </div>
+                <div>
                     <img src="https://via.placeholder.com/300.png" alt="">
-                    <img src="https://via.placeholder.com/300.png" alt="">           
-                    <img src="https://via.placeholder.com/300.png" alt="">  
+                </div>
+                <div>
+                    <img src="https://via.placeholder.com/300.png" alt="">
+                </div>
+                <div>
+                    <img src="https://via.placeholder.com/300.png" alt="">
+                </div>
             </div>
             <div class="titulosCortes">
                 <h4>CORTES MEDIANOS</h4>
             </div>
             <div class="grid">
+                <div>
                     <img src="https://via.placeholder.com/300.png" alt="">
+                </div>
+                <div>
                     <img src="https://via.placeholder.com/500x300.png" alt="">
+                </div>
+                <div>
                     <img src="https://via.placeholder.com/300.png" alt="">
-                    <img src="https://via.placeholder.com/300.png" alt="">                
+                </div>
+                <div>
+                    <img src="https://via.placeholder.com/300.png" alt="">
+                </div>
             </div>
         </section>
     </main>
