--- a/index.html
+++ b/index.html
@@ -2,134 +2,40 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Fuente -->
-    <link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Oswald" rel="stylesheet">
-    <!-- Iconos -->
-    <script src="https://kit.fontawesome.com/1f973a9b4a.js" crossorigin="anonymous"></script>
-    <title>Bootstrap demo</title>
-    <!-- Link bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <!-- Link CSS -->
-    <link rel="stylesheet" href="./css/style.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Fuente -->
+  <link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Oswald" rel="stylesheet">
+  <!-- Iconos -->
+  <script src="https://kit.fontawesome.com/1f973a9b4a.js" crossorigin="anonymous"></script>
+  <title>Bootstrap demo</title>
+  <!-- Link bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <!-- Link CSS -->
+  <link rel="stylesheet" href="./css/style.css">
 
 </head>
 
 <body>
 
-    <!-- Header -->
-    <header class="header">
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand m-0" href="#"><img src="./img/logoroma.png" alt="logoPrincipal"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link" aria-current="page" href="#">Inicio</a>
-                        <a class="nav-link" href="./galeria.html">Galeria</a>
-                        <a class="nav-link" href="#">Nosotros</a>
-                        <a class="nav-link">Reserva tu turno</a>
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <!-- Contenido  -->
-    <main class="main">
-        <section class="container p-4">
-            <h1>Bienvenidos a ROMA estetica</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae quisquam hic laboriosam accusamus
-                aspernatur
-                quo
-                cum sunt. Necessitatibus temporibus corrupti sequi cupiditate unde quod consequuntur accusamus repellat
-                explicabo deleniti, sunt ratione quibusdam facere. Ad et reprehenderit cum quibusdam, expedita ducimus
-                suscipit
-                deleniti id temporibus consectetur accusamus vel nemo sapiente dolore ullam fugiat sed, possimus nam
-                natus,
-                quisquam exercitationem beatae esse?
-            </p>
-        </section>
-        <section id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="https://via.placeholder.com/1920x400.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="https://via.placeholder.com/1920x400.png/FF0000" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="https://via.placeholder.com/1920x400.png/0000FF" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="https://via.placeholder.com/1920x400.png/008000" class="d-block w-100" alt="...">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </section>
-        <section class="container p-4 pb-0">
-            <h2>Lorem ipsum dolor sit amet.</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem, ullam mollitia sequi laborum neque,
-                assumenda sunt aut laboriosam eos omnis nisi veritatis quae, praesentium sint culpa iusto facere
-                repudiandae.
-                Doloribus?</p>
-        </section>
-        <section class="container p-4 infoImagen">
-            <div class="row">
-                <div class="col-12 col-md-6 col-lg-4 pt-4">
-                    <h3>Lorem ipsum dolor sit.</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos facilis quas dolor consectetur
-                        doloremque
-                        temporibus provident natus fugiat, perspiciatis voluptatum.</p>
-                    <img src="https://via.placeholder.com/300" alt="">
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 pt-4">
-                    <h3>Lorem ipsum dolor sit.</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos facilis quas dolor consectetur
-                        doloremque
-                        temporibus provident natus fugiat, perspiciatis voluptatum.</p>
-                    <img src="https://via.placeholder.com/300" alt="">
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 pt-4">
-                    <h3>Lorem ipsum dolor sit.</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos facilis quas dolor consectetur
-                        doloremque
-                        temporibus provident natus fugiat, perspiciatis voluptatum.</p>
-                    <img src="https://via.placeholder.com/300" alt="">
-                </div>
-            </div>
-        </section>
-    </main>
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container-fluid">
-            <div class="redes">
-                <ul class="p-0 m-0">
-                    <li><a href="#" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-                    <li><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></i></a></li>
-                    <li><a href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-                    <li><a href="#" target="_blank"><i class="fa-brands fa-whatsapp"></i></a></li>
-                </ul>
-            </div>
-            <p>HECHO CON MUCHAS COSITAS POR GABRIEL DUARTE</p>
+  <!-- Header -->
+  <header class="header">
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand m-0" href="#"><img src="./img/logoroma.png" alt="logoPrincipal"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" aria-current="page" href="#">Inicio</a>
+            <a class="nav-link" href="#">Galeria</a>
+            <a class="nav-link" href="#">Nosotros</a>
+            <a class="nav-link">Reserva tu turno</a>
+          </div>
         </div>
-<<<<<<< HEAD
-    </footer>
-=======
       </div>
     </nav>
   </header>
@@ -215,11 +121,10 @@
       <p>HECHO CON MUCHAS COSITAS POR GABRIEL DUARTE</p>
     </div>
   </footer>
->>>>>>> index
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-        crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
