--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <header class="header">
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand m-0" href="#"><img src="./img/logoroma.png" alt="logoPrincipal"></a>
+        <a class="navbar-brand m-0" href="./index.html"><img src="./img/logoroma.png" alt="logoPrincipal"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link" aria-current="page" href="#">Inicio</a>
-            <a class="nav-link" href="#">Galeria</a>
+            <a class="nav-link" href="./galeria.html">Galeria</a>
             <a class="nav-link" href="#">Nosotros</a>
             <a class="nav-link">Reserva tu turno</a>
           </div>
