--- a/galeria.html
+++ b/galeria.html
@@ -33,6 +33,7 @@
                         <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
                         <a class="nav-link" href="#">Galeria</a>
                         <a class="nav-link" href="#">Nosotros</a>
+                        <a class="nav-link" href="./unete.html">Unete</a>
                         <a class="nav-link">Reserva tu turno</a>
                     </div>
                 </div>
