--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <a class="nav-link" aria-current="page" href="#">Inicio</a>
             <a class="nav-link" href="./galeria.html">Galeria</a>
             <a class="nav-link" href="#">Nosotros</a>
+            <a class="nav-link" href="./unete.html">Unete</a>
             <a class="nav-link">Reserva tu turno</a>
           </div>
         </div>
@@ -123,8 +124,8 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-    crossorigin="anonymous"></script>
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
