--- a/unete.html
+++ b/unete.html
@@ -18,7 +18,9 @@
 </head>
 
 <body>
+    <!-- Header -->
     <header class="header">
+        <!-- Nav -->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand m-0" href="./index.html"><img src="./img/logoroma.png" alt="logoPrincipal"></a>
@@ -39,10 +41,40 @@
             </div>
         </nav>
     </header>
+    <!-- Contenido -->
     <main>
-
+        <section class="container p-4">
+            <h1>INTERESADO EN TRABAJAR CON NOSOTROS?</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit cum ullam quam necessitatibus, temporibus
+                dolores fuga? Sunt illo placeat possimus harum fugit! Quisquam doloribus sapiente saepe, voluptates
+                nihil ea sunt minus ipsam culpa tempora, blanditiis porro ducimus in iste veritatis.</p>
+        </section>
+        <!-- Formulario -->
+        <section class="container p-4">
+            <div class="row">
+                <form>
+                    <div class="mb-3">
+                        <label for="exampleInputName1" class="form-label">NOMBRE Y APELLIDO</label>
+                        <input type="text" class="form-control" id="exampleInputName1">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">EMAIL</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputNumber1" class="form-label">NUMERO DE CONTACTO</label>
+                        <input type="number" class="form-control" id="exampleInputNumber1">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleFormControlTextarea1" class="form-label">BREVE RESUMEN DE SU PERSONA</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <button type="button" class="btn btn-dark mt-4">Enviar</button>
+                    </div>
+                </form>
+            </div>
+        </section>
     </main>
-
+    <!-- Footer -->
     <footer class="footer">
         <div class="container-fluid">
             <div class="redes">
