--- a/galeria.html
+++ b/galeria.html
@@ -32,16 +32,16 @@
                     <div class="navbar-nav">
                         <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
                         <a class="nav-link" href="#">Galeria</a>
-                        <a class="nav-link" href="#">Nosotros</a>
+                        <a class="nav-link" href="./galeria.html">Nosotros</a>
                         <a class="nav-link" href="./unete.html">Unete</a>
-                        <a class="nav-link">Reserva tu turno</a>
+                        <a class="nav-link" href="./reserva.html">Reserva tu turno</a>
                     </div>
                 </div>
             </div>
         </nav>
     </header>
     <!-- Contenido -->
-    <main>
+    <main class="main">
         <section class="galeria">
             <div class="titulosGaleria">
                 <h1>GALERIA DE CORTES</h1>
@@ -78,7 +78,6 @@
             <p>HECHO CON MUCHAS COSITAS POR GABRIEL DUARTE</p>
         </div>
     </footer>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
