--- a/unete.html
+++ b/unete.html
@@ -42,7 +42,7 @@
         </nav>
     </header>
     <!-- Contenido -->
-    <main>
+    <main class="main">
         <section class="container p-4">
             <h1>INTERESADO EN TRABAJAR CON NOSOTROS?</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit cum ullam quam necessitatibus, temporibus
@@ -88,6 +88,7 @@
             <p>HECHO CON MUCHAS COSITAS POR GABRIEL DUARTE</p>
         </div>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
         </script>
