Container y acordion en nosotros + tabulaciones

--- a/galeria.html
+++ b/galeria.html
@@ -32,7 +32,7 @@
                     <div class="navbar-nav">
                         <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
                         <a class="nav-link" href="#">Galeria</a>
-                        <a class="nav-link" href="./galeria.html">Nosotros</a>
+                        <a class="nav-link" href="./nosotros.html">Nosotros</a>
                         <a class="nav-link" href="./unete.html">Unete</a>
                         <a class="nav-link" href="./reserva.html">Reserva tu turno</a>
                     </div>
