--- a/unete.html
+++ b/unete.html
@@ -33,7 +33,7 @@
                     <div class="navbar-nav">
                         <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
                         <a class="nav-link" href="./galeria.html">Galeria</a>
-                        <a class="nav-link" href="#">Nosotros</a>
+                        <a class="nav-link" href="./nosotros.html">Nosotros</a>
                         <a class="nav-link" href="#">Unete</a>
                         <a class="nav-link">Reserva tu turno</a>
                     </div>
