--- a/nosotros.html
+++ b/nosotros.html
@@ -42,7 +42,99 @@
     </header>
     <!-- Contenido -->
     <main class="main">
-
+        <section class="container p-4">
+            <h1>SOMOS ROMA</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum magni voluptas at nam provident, iusto
+                dignissimos vel. Eveniet odit laboriosam necessitatibus alias officia amet praesentium eius eos atque
+                doloremque? Sapiente.
+                Cupiditate voluptate aperiam tenetur soluta vero aut quibusdam deleniti expedita molestias optio
+                excepturi sapiente veniam adipisci nobis, necessitatibus velit, esse, dolorem aliquid exercitationem
+                tempora voluptatibus deserunt mollitia quam officiis. Architecto.
+                Error, vero ducimus alias similique neque assumenda cum illo fugit praesentium qui consectetur nostrum!
+                Maxime, ut aliquid nobis dolorum alias reiciendis quam debitis, quibusdam animi iusto vitae soluta eum
+                possimus!
+                Totam adipisci laudantium magnam! Odit quas aspernatur eum labore ipsum porro aliquid? Blanditiis at
+                nihil quam necessitatibus error quia non unde explicabo facere voluptatum id qui nemo magni, perferendis
+                maxime.
+                Iusto minus non voluptas. Corporis repellat modi tempore repudiandae, id accusantium officia odio
+                eligendi soluta cupiditate, nostrum placeat dolores ullam? Delectus, excepturi. Quaerat consequatur
+                amet, ipsa vero aliquam nesciunt dolores?</p>
+        </section>
+        <!-- Acordion -->
+        <section class="container pb-4">
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            PRINCIPIOS
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the first item's accordion body.</strong> It is shown by default, until the
+                            collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes
+                            control the overall appearance, as well as the showing and hiding via CSS transitions. You
+                            can
+                            modify any of this with custom CSS or overriding our default variables. It's also worth
+                            noting
+                            that just about any HTML can go within the <code>.accordion-body</code>, though the
+                            transition
+                            does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            OBJETIVOS
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until
+                            the
+                            collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes
+                            control the overall appearance, as well as the showing and hiding via CSS transitions. You
+                            can
+                            modify any of this with custom CSS or overriding our default variables. It's also worth
+                            noting
+                            that just about any HTML can go within the <code>.accordion-body</code>, though the
+                            transition
+                            does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            PREGUNTAS
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
+                            collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes
+                            control the overall appearance, as well as the showing and hiding via CSS transitions. You
+                            can
+                            modify any of this with custom CSS or overriding our default variables. It's also worth
+                            noting
+                            that just about any HTML can go within the <code>.accordion-body</code>, though the
+                            transition
+                            does limit overflow.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- Footer -->
     <footer class="footer">
