seccion reserva terminado, olvide crear rama para la seccion perdon

--- a/unete.html
+++ b/unete.html
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="./galeria.html">Galeria</a>
                         <a class="nav-link" href="./nosotros.html">Nosotros</a>
                         <a class="nav-link" href="#">Unete</a>
-                        <a class="nav-link">Reserva tu turno</a>
+                        <a class="nav-link" href="./reserva.html">Reserva tu turno</a>
                     </div>
                 </div>
             </div>
