--- a/reserva.html
+++ b/reserva.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Oswald" rel="stylesheet">
     <!-- Iconos -->
     <script src="https://kit.fontawesome.com/1f973a9b4a.js" crossorigin="anonymous"></script>
-    <title>Bootstrap demo</title>
+    <title>Reserva tu turno</title>
     <!-- Link bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
